--- a/preparazioneVerifica/src/app/search/search.component.html
+++ b/preparazioneVerifica/src/app/search/search.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <p>
-    <label class="txt">Product Name:</label><br>
+    <label class="txt">Nome prodotto:</label><br>
     <input class="form-control input" type="text" #query><br>
-    <button class="btn btn-primary" (click)="submit(query)">Search</button>
-    <button (click)="clear()" class="btn btn-primary" style="margin-left: 10px;">Clear</button>
+    <button class="btn btn-primary" (click)="submit(query)">Cerca</button>
+    <button (click)="clear()" class="btn btn-primary" style="margin-left: 10px;">Togli</button>
   </p>
 
   <div *ngIf="results">
